@@ -100,19 +100,6 @@ swig -go -help
 </tr>
 
 <tr>
-<td>-gccgo-46</td>
-<td>Generate code for gccgo 4.6.  The default is set by the configure
-  script.  This generates code that does not use some facilities
-  that are only available in gccgo 4.7 and later.</td>
-</tr>
-
-<tr>
-<td>-no-gccgo-46</td>
-<td>Turn off <code>-gccgo-46</code>, whether set by default or earlier
-  on the command line.
-</tr>
-
-<tr>
 <td>-package &lt;name&gt;</td>
 <td>Set the name of the Go package to &lt;name&gt;.  The default
   package name is the SWIG module name.</td>
