@@ -2082,9 +2082,12 @@ else
   if test -n "$GO" ; then
     if $GO --help 2>/dev/null | grep gccgo >/dev/null 2>&1 ; then
       GOGCC=true
+      AC_MSG_CHECKING([whether gccgo version is too old])
       go_version=`$GO --version | sed -e 's/[^0-9]* \([0-9.]*\) .*$/\1/' -e 's/[.]//g'`
       if test "$go_version" -lt 470; then
-        AC_DEFINE(HAVE_GCCGO_46, 1, [Define if using gccgo before 4.7.0])
+        AC_MSG_RESULT([yes - minimum version is 4.7.0])
+      else
+	AC_MSG_RESULT([no])
       fi
     elif test "`echo $GO | sed -e 's|.*/||'`" = "go"; then
       GO1=true
